--- a/index.html
+++ b/index.html
@@ -4,15 +4,16 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="A state-based timer that counts down from 60 seconds to zero.">
-    <title>Countdown Timer</title>
+    <title>Countdown Timer ⏰</title>
     <link href="css/styles.css" rel="stylesheet">
   </head>
   <body>
-    <h1>Countdown Timer</h1>
-    <div id="app"></div>
+    <h1 class="mt0">Countdown Timer ⏰</h1>
     <noscript>
       <p>Please enable JavaScript in your browser to use this timer.</p>
     </noscript>
+    <div id="app" class="mb4 f1" aria-live="polite"></div>
+    <button id="restart" class="db w-100 btn btn-primary btn-lg" type="button" disabled>Restart</button>
     <script src="js/app.js"></script>
   </body>
 </html>
