--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="A state-based timer that counts down from 60 seconds to zero.">
     <title>Countdown Timer ⏰</title>
-    <link href="css/styles.css" rel="stylesheet">
+    <link href="css/styles.min.css" rel="stylesheet">
   </head>
   <body>
     <h1 class="mt0">Countdown Timer ⏰</h1>
@@ -14,6 +14,6 @@
     </noscript>
     <div id="app" class="mb4 f1" aria-live="polite"></div>
     <button id="restart" class="db w-100 btn btn-primary btn-lg" type="button" disabled>Restart</button>
-    <script src="js/app.js"></script>
+    <script src="js/app.min.js"></script>
   </body>
 </html>
