Add alarm clock favicon

--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="A state-based timer that counts down from 60 seconds to zero.">
     <title>Timer</title>
+    <link href="apple-touch-icon.png" rel="apple-touch-icon" sizes="180x180">
+    <link href="favicon-32x32.png" rel="icon" type="image/png" sizes="32x32">
+    <link href="favicon-16x16.png" rel="icon" type="image/png" sizes="16x16">
     <link href="css/styles.css" rel="stylesheet">
   </head>
   <body>
