--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link href="apple-touch-icon.png" rel="apple-touch-icon" sizes="180x180">
     <link href="favicon-32x32.png" rel="icon" type="image/png" sizes="32x32">
     <link href="favicon-16x16.png" rel="icon" type="image/png" sizes="16x16">
-    <link href="css/styles.css" rel="stylesheet">
+    <link href="css/styles.min.css" rel="stylesheet">
   </head>
   <body>
     <h1>Timer</h1>
@@ -16,6 +16,6 @@
       <p>Please enable JavaScript in your browser to use this timer.</p>
     </noscript>
     <div id="app" aria-live="polite"></div>
-    <script src="js/app.js"></script>
+    <script src="js/app.min.js"></script>
   </body>
 </html>
