Add link to polyfill.io for String.prototype.padStart

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
       <p>Please enable JavaScript in your browser to use this timer.</p>
     </noscript>
     <div id="app" aria-live="polite"></div>
+    <script crossorigin="anonymous" src="https://polyfill.io/v3/polyfill.min.js?features=String.prototype.padStart"></script>
     <script src="js/app.min.js"></script>
   </body>
 </html>
