Update HTML and CSS

--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
     <link href="css/styles.min.css" rel="stylesheet">
   </head>
   <body>
-    <h1>Timer</h1>
+    <h1 class="f1">Timer</h1>
     <noscript>
       <p>Please enable JavaScript in your browser to use this timer.</p>
     </noscript>
-    <div id="app" aria-live="polite"></div>
+    <div id="app" class="f2" aria-live="polite"></div>
     <script crossorigin="anonymous" src="https://polyfill.io/v3/polyfill.min.js?features=String.prototype.padStart"></script>
     <script src="js/app.min.js"></script>
   </body>
